syntax = "proto3";
package proto;

option java_multiple_files = true;

option csharp_namespace = "Proto.Generated.PSettings";
option java_package = "proto.generated.pSettings";


import "google/protobuf/struct.proto";




enum PLanguages {
  EN = 0;
  FR = 1;
  ZH_CN = 2;
}

enum PThemes {
  DARK = 0;
  LIGHT = 1;
  SYSTEM = 2;
}

message PConfInfo {
  string PId = 1;
  string PName = 2;
}

message NullableId {
  oneof kind {
    google.protobuf.NullValue null = 1;
    string PId = 2;
  }
}


message PSettings {
  PLanguages PLanguage = 1;
  NullableId PConfId = 2;
  repeated PConfInfo PConfInfos = 3;
  int32 PUpdateDelay = 4;
  PThemes PTheme = 5;
  bool PFirstStart = 6;
  bool PLaunchAtStartUp = 7;
  bool PDegree = 8;
  int32 PValueDisableControl = 9;
  string PVersionInstalled = 10;
}
